--- a/ANSIColorDemo/README
+++ b/ANSIColorDemo/README
@@ -1,1 +1,7 @@
 This provides a small example of using the ANSI escape codes in C to make colored text.
+
+To Build:
+```gcc colordemo.c -o colordemo```
+
+Running:
+This demo does not take any arguments.
